Fixes the spacing weirdness

--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,8 @@ html, body {
 /*Videos tab*/
 #Videos {
   display: block;
+  height: calc(100% - 2.5em);
+  width: 100%;
   overflow-y: scroll;
 }
 #videoUtils {
@@ -164,7 +166,7 @@ html, body {
 }
 .videoDIV {
   width: 90%;
-  height: 25%;
+  height: 6em;
   margin: 10px 5%;
   border: 1px solid #99a4b5;
   overflow: hidden;
